<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.ardoco</groupId>
  <artifactId>SimpleTracelinkDiscovery</artifactId>
  <version>1.0-SNAPSHOT</version>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>Lin0pan</id>
      <organization>KASTEL</organization>
      <organizationUrl>https://mcse.kastel.kit.edu/</organizationUrl>
      <timezone>GMT+1</timezone>
    </developer>
    <developer>
      <id>Gram21</id>
      <name>Jan Keim</name>
      <email>jan.keim@kit.edu</email>
      <url>https://mcse.kastel.kit.edu/staff_Keim_Jan.php</url>
      <organization>KASTEL</organization>
      <organizationUrl>https://mcse.kastel.kit.edu/</organizationUrl>
      <timezone>GMT+1</timezone>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/ArDoCo/SimpleTracelinkDiscovery.git</connection>
    <developerConnection>scm:git:ssh://github.com:ArDoCo/SimpleTracelinkDiscovery.git</developerConnection>
    <url>https://github.com/ArDoCo/SimpleTracelinkDiscovery</url>
  </scm>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/ArDoCo/SimpleTracelinkDiscovery/issues</url>
  </issueManagement>

  <properties>
    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <deeplearning4j.version>1.0.0-M2</deeplearning4j.version>
    <slf4j.version>1.7.36</slf4j.version>

    <spotless.version>2.22.5</spotless.version>
    <error-prone.version>2.10.0</error-prone.version>

    <sonar.organization>ardoco</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.projectKey>ArDoCo_SimpleTracelinkDiscovery</sonar.projectKey>
    <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.github.ardoco.core</groupId>
      <artifactId>model-provider</artifactId>
      <version>0.5-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>log4j-over-slf4j</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

  </dependencies>

  <repositories>
    <repository>
      <id>mavenCentral</id>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
    <repository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>mavenSnapshot</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M6</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.0.0-M6</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.8</version>
        <executions>
          <execution>
            <id>jacoco-initialize</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
        <configuration>
          <formats>
            <format>
              <includes>
                <include>*.md</include>
                <include>.gitignore</include>
              </includes>
              <trimTrailingWhitespace></trimTrailingWhitespace>
              <endWithNewline></endWithNewline>
              <indent>
                <tabs>true</tabs>
                <spacesPerTab>4</spacesPerTab>
              </indent>
            </format>
          </formats>
          <!-- define a language-specific format -->
          <java>
            <eclipse>
              <!--suppress UnresolvedMavenProperty -->
              <file>formatter.xml</file>
            </eclipse>
            <removeUnusedImports></removeUnusedImports>
            <licenseHeader>
              <!--suppress UnresolvedMavenProperty -->
              <file>license-header</file>
            </licenseHeader>
          </java>
          <pom>
            <sortPom>
              <encoding>UTF-8</encoding>
              <keepBlankLines>true</keepBlankLines>
              <indentBlankLines>false</indentBlankLines>
              <nrOfIndentSpace>2</nrOfIndentSpace>
            </sortPom>
          </pom>
          <ratchetFrom>origin/main</ratchetFrom>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>${java.version}</release>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>UTF-8</encoding>
          <fork>true</fork>
          <compilerArgs>
            <arg>-XDcompilePolicy=simple</arg>
            <arg>-Xplugin:ErrorProne</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
          </compilerArgs>
          <meminitial>128m</meminitial>
          <maxmem>512m</maxmem>
          <annotationProcessorPaths>
            <path>
              <groupId>com.google.errorprone</groupId>
              <artifactId>error_prone_core</artifactId>
              <version>${error-prone.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
